# minformer

./: .gitignore  README.md  experiments.ipynb  pyproject.toml  requirements.txt  setup.py
minformer/: experiments.ipynb  model.py  model_test.py  tpu.py  utils.py
projects/bio/: data.py  data_hf.py  data_shae.py  download_data.py  experiments.ipynb  experiments_finetune.ipynb  finetune.py  make_intermediates.ipynb  train.py  utils.py
projects/bio/modelling/: README.md  model.py  model_test.py
projects/charformer/: README.md  data.py  download_data.py  train.py  utils.py
