[tool.poetry]
name = "minformer"
version = "0.1.0"
description = ""
authors = ["Sholto Douglas", "Tristan Frizza <tfrizza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = {version = "0.4.31", extras = ["tpu"]}
tensorflow = "*"
flax = "*"
tqdm = "*"
numpy = "*"
ipywidgets = "*"
tensorboard-plugin-profile = "*"
tensorboard = "*"
tensorboardX = "*"
orbax = "*"
datasets = "^2.15"
gcsfs = "*"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
ruff = "*"
isort = "*"
black = "*"
mypy = "*"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
black = "black ."
isort = "isort ."
format = ["black", "isort"]
lint = "ruff check ."
mypy = "mypy ."

[[tool.poetry.source]]
name = "jax-releases"
url = "https://storage.googleapis.com/jax-releases/jax_nightly_releases.html"
priority = "supplemental"

[[tool.poetry.source]]
name = "libtpu-releases"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
priority = "supplemental"